--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@abcnews/alternating-case-to-object": "^3.1.1",
     "@abcnews/base-36-text": "^1.0.1",
     "mocha": "^11.0.1"
   },
   "peerDependencies": {
-    "svelte": "^5.0.0"
+    "svelte": "^5.20.1"
   }
 }
